fixing dark mode 2

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,11 @@
 ---
 ---
-
+@import "minima/skins/dark";
 @import "minima";
+
+html {
+  background-color: #0d1117;
+}
 
 body {
   background-color: #0d1117;
